[package]
name = "educational_dp"
version = "0.1.0"
authors = ["ynishimura <ynishimura0922@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 競技プログラミングの入出力サポートその1
proconio = { version = "=0.3.6", features = ["derive"] }

[[bin]]
name = "a"
path = "src/a.rs"

[[bin]]
name = "b"
path = "src/b.rs"